# wlmatrix

./: .gitignore  CMakeList.txt  CMakeLists.txt  ClientInfo.h  ClientInfoRepository.h  ClientRepository.cpp  ClientRepository.h  IClientSocket.h  IMSNPCommand.h  IMSNPCommandHandler.h  IMSNPInterpreter.h  ISocket.h  LICENSE  MSNClient.cpp  MSNClient.h  MSNP18.cpp  MSNP18.h  MSNPCommandFactory.h  MSNPCommandHandlers.cpp  MSNPCommands.cpp  MSNPCommands.h  MSNPHandshake.cpp  MSNPHandshake.h  MSNPInterpreterFactory.cpp  MSNPInterpreterFactory.h  MSNServer.cpp  MSNServer.h  MSNSwitchboard.cpp  MSNSwitchboard.h  MSNSwitchboardServer.h  MSNeoPoc.cpp  MSNeoPoc.sln  MSNeoPoc.vcxproj  MSNeoPoc.vcxproj.filters  MainController.cpp  MainController.h  README.md  SocketServer.cpp  SocketServer.h  StringUtils.cpp  (+7 more)
WLMatrix/: .gitignore  CMakeLists.txt
WLMatrix/data/: CMakeLists.txt
WLMatrix/data/xml/: MsgrConfig_response.xml  RST2.xml  RST2_response_success og.xml  RST2_response_success.xml
WLMatrix/data/xml/ab/: circle.xml  contact.xml  contact_me.xml  find_contacts_paged.xml  find_contacts_paged_circle_reverse_info.xml  find_contacts_paged_contact.xml  find_contacts_paged_contact_self.xml  find_contacts_paged_template.xml  find_membership.xml  find_membership_member_template.xml  find_membership_response_template.xml
WLMatrix/include/libmatrix/: AccountData.h  AuthResponse.h  IJsonSerializable.h  MatrixAccountData.h  MatrixBackend.h  MatrixCredentials.h  MatrixEvent.h  MatrixInvitedRoom.h  MatrixJoinedRoom.h  MatrixLeftRoom.h  MatrixRoom.h  RestServiceException.h  SyncResponse.h  WhoAmIResponse.h
WLMatrix/include/libmatrix/api/rest/: AuthResponse.h  MatrixBackend.h  MatrixErrorCode.h  MatrixErrorResponse.h  SyncResponse.h  WhoAmIResponse.h
WLMatrix/include/libmatrix/events/: IMatrixEvent.h  MatrixEvent.h
WLMatrix/include/libmatrix/exceptions/: MatrixRestServiceException.h  RestServiceException.h
WLMatrix/include/libmatrix/models/: MatrixAccountData.h  MatrixCredentials.h  MatrixInvitedRoom.h  MatrixJoinedRoom.h  MatrixLeftRoom.h  MatrixPresence.h
WLMatrix/include/wlmatrix/: AbstractMSNSoapService.h  ClientInfo.h  ClientInfoRepository.h  CryptoUtils.h  DateUtils.h  IMSNSoapService.h  ISoapEndpointHandler.h  MSNCircle.h  MSNClient.h  MSNContact.h  MSNContactType.h  MSNMember.h  MSNMembershipEnums.h  MSNMembershipList.h  MSNNotificationServer.h  MSNPCommand.h  MSNPCommandHandlers.h  MSNPCommandParser.h  MSNSoapMessages.h  MSNSoapServer.h  MSNSoapToMatrix.h  MSNSwitchboardServer.h  MSNUtils.h  MainController.h  MatrixBackend.h  MatrixToMSNSoap.h  SoapEndpointHandlers.h  SoapResponse.h  StringUtils.h  TCPServer.h
WLMatrix/include/wlmatrix/api/soap/: AbstractMSNSoapService.h  IMSNSoapService.h  MSNABService.h  MSNAuthService.h  MSNStorageService.h  SoapEndpointHandlerFactory.h  SoapEndpointHandlers.h  SoapResponse.h
WLMatrix/include/wlmatrix/controllers/: MainController.h
WLMatrix/include/wlmatrix/models/: ClientInfo.h  WLMatrixLogin.h
WLMatrix/include/wlmatrix/models/commands/: MSNPCommandHandlerFactory.h  MSNPCommandParser.h
WLMatrix/include/wlmatrix/models/soap/: MSNCircle.h  MSNContact.h  MSNMember.h  MSNMembershipList.h  MSNMembershipListType.h  MSNMembershipState.h
WLMatrix/include/wlmatrix/socket/: IClientSocket.h  IMSNPCommandHandler.h  MSNClient.h  MSNNotificationServer.h  MSNSwitchboardServer.h  SocketServerException.h  WinSockSocket.h
WLMatrix/include/wlmatrix/utils/: MacAddressUtils.h  StringUtils.h  XMLStringWriter.h
WLMatrix/include/wlmatrix/utils/soap/: MSNSoapMessages.h  MSNSoapToMatrix.h  MatrixToMSNSoap.h
WLMatrix/src/: main.cpp
WLMatrix/src/Controllers/: MainController.cpp
WLMatrix/src/Exceptions/: SocketServerException.cpp
WLMatrix/src/Models/: ClientInfo.cpp  MSNClient.cpp  MSNPCommand.cpp  MSNPCommandHandlerFactory.cpp  MSNPCommandHandlers.cpp  MSNSoapServer.cpp  MSNSwitchboard.cpp  MatrixBackend.cpp
WLMatrix/src/Models/MSN/: MSNPCommandHandlerFactory.cpp  MSNPCommandHandlers.cpp  MSNPCommandParser.cpp  MSNSoapServer.cpp
WLMatrix/src/Models/MSN/Commands/: MSNPCommandHandlers.cpp  MSNPCommandParser.cpp
WLMatrix/src/Models/MSN/SOAP/: MSNSoapServer.cpp  MSNSoapToMatrix.cpp  MatrixToMSNSoap.cpp  SoapEndpointHandlerFactory.cpp  SoapEndpointHandlers.cpp
WLMatrix/src/Models/Matrix/: AuthResponse.cpp  MatrixAccountData.cpp  MatrixBackend.cpp  MatrixCredentials.cpp  MatrixJoinedRoom.cpp  SyncResponse.cpp  WhoAmIResponse.cpp
WLMatrix/src/Models/Matrix/Events/: MatrixEvent.cpp
WLMatrix/src/Repositories/: ClientInfoRepository.cpp
WLMatrix/src/Sockets/: TCPServer.cpp  WinSockSocket.cpp
WLMatrix/src/Utils/: CryptoUtils.cpp  StringUtils.cpp
WLMatrix/src/libmatrix/api/rest/: AuthResponse.cpp  MatrixBackend.cpp  MatrixErrorResponse.cpp  SyncResponse.cpp  WhoAmIResponse.cpp
WLMatrix/src/libmatrix/exceptions/: MatrixRestServiceException.cpp  RestServiceException.cpp
WLMatrix/src/libmatrix/models/: MatrixAccountData.cpp  MatrixCredentials.cpp  MatrixInvitedRoom.cpp  MatrixJoinedRoom.cpp  MatrixLeftRoom.cpp  MatrixPresence.cpp
WLMatrix/src/libmatrix/models/events/: MatrixEvent.cpp
WLMatrix/src/wlmatrix/api/soap/: AbstractMSNSoapService.cpp  MSNAuthService.cpp  MSNSoapServer.cpp  SoapEndpointHandlers.cpp  SoapResponse.cpp
WLMatrix/src/wlmatrix/models/: ClientInfo.cpp  WLMatrixLogin.cpp
WLMatrix/src/wlmatrix/models/commands/: MSNPCommandHandlerFactory.cpp  MSNPCommandHandlers.cpp
WLMatrix/src/wlmatrix/models/soap/: MSNCircle.cpp  MSNContact.cpp  MSNContactType.cpp  MSNMember.cpp  MSNMembershipList.cpp  MSNMembershipListType.cpp  MSNMembershipState.cpp
WLMatrix/src/wlmatrix/repositories/: ClientInfoRepository.cpp
WLMatrix/src/wlmatrix/sockets/: MSNClient.cpp  TCPServer.cpp  WinSockClientSocket.cpp
WLMatrix/src/wlmatrix/utils/: CryptoUtils.cpp  MSNUtils.cpp  MacAddressUtils.cpp  StringUtils.cpp
WLMatrix/src/wlmatrix/utils/soap/: MSNSoapMessages.cpp  MSNSoapToMatrix.cpp  MatrixToMSNSoap.cpp
